--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,6 +1,5 @@
 server.port=8081
-
-spring.datasource.url=jdbc:h2:mem:documentclientdb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
@@ -11,8 +10,3 @@ spring.jpa.hibernate.ddl-auto=create
 
 spring.h2.console.enabled = true
 spring.h2.console.path = /h2-console
-
-spring.datasource.initialization-mode=always
-
-logging.level.com.stepanov.documentclient = info
-logging.file.name=logs/documentclient.log
